Fix alignment of band title on desktop view

--- a/style1.css
+++ b/style1.css
@@ -727,6 +727,15 @@ body {
 
 	.band-member-container {display: contents;}
 
+  .band-member-title {
+    max-width: none;
+    position: relative;
+    display: flex;
+    align-items: center;
+    margin: 0 auto;
+    font-size: 2rem;
+  }
+
 	.band-member-text {font-size: 1.25rem;}
 
 	#band-intro-container {grid-area: 1/2/2/5;}
